# play_youtube_url_noson

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  Dockerfile.live  README.md  config.example.json  docker-compose.yml  install.sh  play_youtube_url_noson  pyproject.toml  pyrightconfig.json  queue_youtube_noson  yt_sonos.py
tests/: README.md  integration_test.py
tests/stubs/: sonos  sonos-discover  yt-dlp
